--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "solosoul_front",
+  "homepage": "https://ilukjan.github.io/solosoul_front/solosoul_front/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
