--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://solosoul.azurewebsites.net/
+# REACT_APP_API_URL=https://solosoul.azurewebsites.net/
+REACT_APP_API_URL=https://192.168.1.13:7118/
