--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@microsoft/signalr": "^8.0.0",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@rajesh896/broprint.js": "^2.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
