--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@microsoft/signalr": "^8.0.0",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@rajesh896/broprint.js": "^2.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "react-insta-stories": "^2.6.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
